Update workflow to auto-build on every push and improve release handling

--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -1,6 +1,10 @@
 name: iOS-ipa-build
 
 on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -9,13 +13,22 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Get version from pubspec.yaml
+        id: version
+        run: |
+          VERSION=$(grep 'version:' pubspec.yaml | sed 's/version: //')
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Version: $VERSION"
 
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
           architecture: x64
+          
       - run: flutter pub get
-      
 
       - run: pod repo update
         working-directory: ios
@@ -32,11 +45,41 @@ jobs:
         run: zip -qq -r -9 FlutterIpaExport.ipa Payload
         working-directory: build/ios/iphoneos
 
-      - name: Upload binaries to release
-        uses: svenstaro/upload-release-action@v2
+      - name: Create Release
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: build/ios/iphoneos/FlutterIpaExport.ipa
-          tag: v1.0
-          overwrite: true
-          body: "This is first release" 
+          tag_name: v${{ steps.version.outputs.version }}
+          release_name: Release v${{ steps.version.outputs.version }}
+          body: |
+            ## Run iOS App v${{ steps.version.outputs.version }}
+            
+            ### What's New
+            - iOS IPA build for client ID input app
+            - Built on: ${{ github.event.head_commit.timestamp }}
+            - Commit: ${{ github.sha }}
+            
+            ### Installation
+            Download the IPA file and install on your iOS device.
+          draft: false
+          prerelease: false
+
+      - name: Upload IPA to Release
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: build/ios/iphoneos/FlutterIpaExport.ipa
+          asset_name: RunIOS-v${{ steps.version.outputs.version }}.ipa
+          asset_content_type: application/octet-stream
+
+      - name: Upload IPA as Artifact (for PRs)
+        if: github.event_name == 'pull_request'
+        uses: actions/upload-artifact@v3
+        with:
+          name: RunIOS-IPA
+          path: build/ios/iphoneos/FlutterIpaExport.ipa 
