Fix iOS build destination issue and update AppDelegate

--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -31,20 +31,15 @@ jobs:
       - name: Flutter pub get
         run: flutter pub get
 
-      - name: Setup iOS build environment
-        run: |
-          cd ios
-          flutter build ios --no-codesign --debug
-          cd ..
-
       - name: Install iOS dependencies
         run: |
           cd ios
           pod install --repo-update
           cd ..
 
-      - name: Build iOS app
-        run: flutter build ios --release --no-codesign
+      - name: Build iOS app for device
+        run: |
+          flutter build ios --release --no-codesign --dart-define=FLUTTER_BUILD_NUMBER=${{ steps.version.outputs.version }}
 
       - name: Create Payload directory
         run: mkdir -p build/ios/iphoneos/Payload
